Fix the close button not showing up in Safari, due to the close button being rendered outside of the elements padding box.

--- a/mu-plugins/blocks/global-header-footer/postcss/header/menu.pcss
+++ b/mu-plugins/blocks/global-header-footer/postcss/header/menu.pcss
@@ -166,3 +166,14 @@
 		}
 	}
 }
+
+/* Gutenberg bug, override it locally */
+.global-header__navigation {
+	& .has-modal-open {
+		overflow: visible;
+
+		& div {
+			overflow: scroll;
+		}
+	}
+}
